--- a/molgenis-web-application/pom.xml
+++ b/molgenis-web-application/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>web-application</artifactId>
+    <artifactId>molgenis-web-application</artifactId>
     <packaging>war</packaging>
 
     <properties>
@@ -18,6 +18,7 @@
     </properties>
 
     <dependencies>
+        <!-- for working with *.ftl files -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
@@ -60,6 +61,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
 
+        <resources>
+            <resource>
+                <directory>resources</directory>
+                <targetPath>${project.build.outputDirectory}</targetPath>
+                <includes>
+                    <include>application.properties</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
