Replaced application properties with logback.xml

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,6 @@
     </properties>
 
     <modules>
-        <module>web-application</module>
+        <module>molgenis-web-application</module>
     </modules>
 </project>
